feat: add ControlsFX controls (require --add-opens)